public/headerStyles/bbpHeaderStyle.css
@media(min-width:0px) {
  .margintopde {
    margin-top: 15px;
  }
}

@media(min-width:1030px) {
  .margintople {
    margin-top: -30px;
  }
}

@media (max-width: 1030px) {
  .navbar-header {
    float: none;
  }
  .navbar-toggle {
    display: block;
  }
  .navbar-collapse {
    border-top: 1px solid transparent;
    box-shadow: inset 0 1px 0 rgba(255, 255, 255, 0.1);
  }
  .navbar-collapse.collapse {
    display: none!important;
  }
  .navbar-nav {
    float: none!important;
    margin: 7.5px -15px;
  }
  .navbar-nav>li {
    float: none;
  }
  .navbar-nav>li>a {
    padding-top: 10px;
    padding-bottom: 10px;
  }
  .navbar-text {
    float: none;
    margin: 15px 0;
  }
  /* since 3.1.0 */
  .navbar-collapse.collapse.in {
    display: block!important;
  }
  .collapsing {
    overflow: hidden!important;
  }
}


.logo {
    border: 0 none;
    height: 50px;
    max-width: 220px;
    /*margin-left: 16px;*/
    margin-right: 16px;
}


.brand-bar {
    background-image:url(http://biodiversity.bt//assets/all/header-bg.jpg);
    background-repeat: repeat-y;
    background-position: top left;

    margin-bottom:1px;
}
.logobar{
  max-height:14vh;

}

.logoimage{
  height:10vh;
  width:10vh;
  align:middle;
  margin-top: 1vh;
  margin-bottom: auto;
}

.logoimageinside{
  height:4vh;
  width:24vw;
  align:middle;
  text-align:center;
  margin-top: 0.5vh;
  margin-bottom: auto;
  margin-left: 6vw;
}
.logofont{
  font-size:1.9vw!important;
  text-shadow: 0 1px 0 #ffffff;
}

@media only screen and (max-width:1024px) {
  .logofont{
    font-size:2vh!important;

  }
}

.menu-item {
    /*background-image:-webkit-linear-gradient(left, #cccccc, #ffffff);*/
}

#headerWrapper {
    top: 0;
    z-index: 1030;
    position: fixed;
    right: 0;
    left: 0;
    border-width: 0 0 1px;
    min-height: 100px;
    border: 1px solid transparent;
}

#footerWrapper {
    border-width: 0 0 1px;

    width:100%;
    border: 1px solid transparent;
    background-color: #8ca643!important;
    color:white!important;
    margin-left: 0.7vw;
    overflow-x:hidden!important;
}
#contentWrapper {
    min-height: 100%;
    height: 100%;
    width: 100%;
    position: absolute;
    top: 240px!important;
    left: 0;
    display: inline-block;
}
@media only screen and (max-height: 1500px) {
  #contentWrapper {
      top: 270px!important;
  }
}
@media only screen and (max-height: 1350px) {
  #contentWrapper {
      top: 260px!important;
  }
}
@media only screen and (max-height: 1200px) {
  #contentWrapper {
      top: 240px!important;
  }
}
@media only screen and (max-height: 1050px) {
  #contentWrapper {
      top: 220px!important;
  }
}
@media only screen and (max-height: 900px) {
  #contentWrapper {
      top: 200px!important;
  }
}
@media only screen and (max-height: 750px) {
  #contentWrapper {
      top: 180px!important;
  }
}
#content {
    padding: 0px 0 0px 0;
}
#contentColumnWrapper {
    height: 100%;
    padding:14px;
    overflow-y: auto;
}
#contentColumn {
    position: relative;
    height: 100%;
    overflow-y: auto;
    overflow-x: hidden!important;
    padding: 0px;
}
#leftSidebarWrapper {
    height: 100%;
    position: fixed;
    padding:0px 0px 0px 0px;
    /*background-color:black;
    box-shadow:3px 3px 6px 3px rgb(0, 0, 0);*/

}
#leftSidebar {
    position: relative;
    height: 100%;
    overflow:auto;
    margin-right: -10px;
}
#leftSidebar .list-group-item {
    border-radius: 0;
    border-left: 0;
    border-right: 0;
    border-top: 0;
}
 #header_menu3{
   color:white!important;
   font-weight: bold!important;
 }

.viewContent, .panel>.panel-body {
    background-color:#F0FCCF!important;
    overflow:auto;
}

.text-primary {
    font-weight: bold;
    color:black;
    text-decoration: none;
    text-shadow: 1px 1px 3px #999999;
}
.panel>.panel-heading {
    height:52px; /*42 for nav-tabs + 10px padding*/
/*    background-color:#3c763d;
*/
}
.vertical-align {
    display: flex;
    align-items: center;
    justify-content: space-between;
    flex-direction: row;
}
.bbpLink{
  color:#FFF!important;
}
.html,body{
  overflow-x: hidden;
}
::-webkit-scrollbar {
    width: 9px;
}

/* Track */
::-webkit-scrollbar-track {
    background: rgb(0,0,0);
    border: 4px solid transparent;
    background-clip: content-box;   // this is important
}

/* Handle */
::-webkit-scrollbar-thumb {
    background: grey;
    border: 1px  rgb(0,0,0);
}

